[package]
name = "big-decimal-byte-string-encoder"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Google BigQuery's BigDecimalByteStringEncoder"
license = "Apache-2.0"
documentation = "https://docs.rs/big-decimal-byte-string-encoder"
authors = ["Antoine Pultier <antoine.pultier@sintef.no>"]
repository = "https://github.com/SINTEF/rust-big-decimal-byte-string-encoder"
keywords = ["bigquery", "numeric", "encoding", "google", "gcp", "bigdecimal"]
categories = ["encoding", "database"]
include = ["README.md", "LICENSE", "Cargo.toml", "tests/*", "src/*"]

[dependencies]
bigdecimal = "0.4"
once_cell = "1.19"
num-bigint = "0.4"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"
